mobile browser to app (#15)
* check if request is from a phone

* browser app tp app flow

* get sessions with proper entity

--- a/packages/identity-consent/k8s/k8s-dev.yml
+++ b/packages/identity-consent/k8s/k8s-dev.yml
@@ -57,6 +57,11 @@ spec:
             configMapKeyRef:
               name: identity-provider-configmap
               key: MOCK_TLS_TERMINATION
+        - name: API_KEY
+          valueFrom:
+            secretKeyRef:
+              name: identity-api-key
+              key: api-key
       restartPolicy: Always
 ---
 
