--- a/packages/identity-consent/k8s/k8s-pro.yml
+++ b/packages/identity-consent/k8s/k8s-pro.yml
@@ -57,6 +57,11 @@ spec:
             configMapKeyRef:
               name: identity-provider-configmap
               key: MOCK_TLS_TERMINATION
+        - name: API_KEY
+          valueFrom:
+            secretKeyRef:
+              name: identity-api-key
+              key: api-key
       restartPolicy: Always
 ---
 
