deployment issue fixed (#16)
* check if request is from a phone

* browser app tp app flow

* get sessions with proper entity

* fix deployment issue, adding API_URL

--- a/packages/identity-consent/k8s/configmap-dev.yml
+++ b/packages/identity-consent/k8s/configmap-dev.yml
@@ -5,6 +5,7 @@ metadata:
 data:
   REDIS_URL: "redis"
   BASE_URL: "https://dev.vidchain.net"
+  API_URL: "https://dev.vidchain.net"
   PORT: "3000"
   REDIS_PORT: "6379"
   HYDRA_URL: "http://hydra:9001"
