--- a/packages/identity-consent/k8s/configmap-pro.yml
+++ b/packages/identity-consent/k8s/configmap-pro.yml
@@ -5,6 +5,7 @@ metadata:
 data:
   REDIS_URL: "redis"
   BASE_URL: "https://api.vidchain.net"
+  API_URL: "https://api.vidchain.net"
   PORT: "3000"
   REDIS_PORT: "6379"
   HYDRA_URL: "http://hydra:9001"
