--- a/packages/identity-consent/package.json
+++ b/packages/identity-consent/package.json
@@ -31,6 +31,7 @@
     "@nestjs/websockets": "^7.0.3",
     "@types/socket.io-client": "^1.4.33",
     "@validated-id/vid-did-resolver": "0.0.7",
+    "@validatedid/did-auth": "0.0.1",
     "base-58": "0.0.1",
     "base-64": "^1.0.0",
     "base64url": "^3.0.1",
