update did-auth library

--- a/packages/identity-consent/package.json
+++ b/packages/identity-consent/package.json
@@ -31,7 +31,7 @@
     "@nestjs/websockets": "^7.0.3",
     "@types/socket.io-client": "^1.4.33",
     "@validated-id/vid-did-resolver": "0.0.7",
-    "@validatedid/did-auth": "0.0.1",
+    "@validatedid/did-auth": "^2.0.0",
     "base-58": "0.0.1",
     "base-64": "^1.0.0",
     "base64url": "^3.0.1",
@@ -46,6 +46,7 @@
     "jose": "^1.27.0",
     "key-encoder": "^2.0.3",
     "qrcode": "^1.4.4",
+    "querystring": "^0.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.5",
