--- a/packages/identity-consent/tsconfig.json
+++ b/packages/identity-consent/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "@tsconfig/node14/tsconfig.json",
   "compilerOptions": {
     "module": "commonjs",
     "esModuleInterop": true,
@@ -8,17 +9,9 @@
     "experimentalDecorators": true,
     "target": "es2017",
     "sourceMap": true,
-    "outDir": "./dist",
-    "baseUrl": "./",
-    "incremental": true,
-    "paths": {
-      "@lib/did-siop": [
-        "libs/lib-did-siop/src"
-      ],
-      "@lib/did-siop/*": [
-        "libs/lib-did-siop/src/*"
-      ],
-    }
+    "outDir": "dist",
+    "incremental": true
   },
+  "include": ["src"],
   "exclude": ["node_modules", "dist"]
 }
