--- a/packages/identity-consent/package.json
+++ b/packages/identity-consent/package.json
@@ -36,7 +36,6 @@
     "@nestjs/platform-socket.io": "^7.6.4",
     "@nestjs/testing": "^7.6.4",
     "@nestjs/websockets": "^7.6.4",
-    "@types/socket.io-client": "^1.4.34",
     "@validatedid/did-auth": "^2.1.2",
     "axios": "^0.21.1",
     "base-58": "0.0.1",
@@ -62,8 +61,8 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
-    "socket.io": "^3.0.4",
-    "socket.io-client": "^3.0.4",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "winston": "^3.3.3"
   },
   "devDependencies": {
@@ -79,6 +78,8 @@
     "@types/node": "^14.14.14",
     "@types/node-fetch": "^2.5.7",
     "@types/qrcode": "^1.3.5",
+    "@types/socket.io": "^2.1.4",
+    "@types/socket.io-client": "^1.4.32",
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.11.0",
     "@typescript-eslint/parser": "^4.11.0",
