--- a/azure-pipelines/azure-pipelines-dev.yml
+++ b/azure-pipelines/azure-pipelines-dev.yml
@@ -29,7 +29,7 @@ variables:
   # Agent VM image name
   vmImageName: 'ubuntu-latest'
   # Check if there are changes of the following files
-  checkFiles: '("azure-pipelines/azure-pipelines-dev.yml" "$(configMap)" "$(k8s)" "packages/identity-consent/src" "packages/identity-consent/public" "packages/identity-consent/views" "packages/identity-consent/package.json" "packages/identity-consent/package-lock.json")'
+  checkFiles: '("azure-pipelines/azure-pipelines-dev.yml" "$(configMap)" "$(k8s)" "packages/identity-consent" "packages/hydra")'
 
 stages:
 - stage: 'Build'
@@ -50,7 +50,7 @@ stages:
           echo "##vso[build.updatebuildnumber]$npmVersionString-commit.$shortCommit"
         displayName: 'retrieve $(packageJson) version'
   - job: CheckChanges
-    displayName: 'Checking if there are changes in identity-consent'
+    displayName: 'Checking changes in identity-consent'
     pool:
       vmImage: $(vmImageName)
     steps:
