--- a/packages/identity-consent/package.json
+++ b/packages/identity-consent/package.json
@@ -1,19 +1,26 @@
 {
   "name": "vidchain-login-provider",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "Validated ID Open Identity Provider",
+  "author": "Validated ID <info@validatedid.com>",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "ISC",
   "scripts": {
+    "audit": "audit-ci --moderate",
     "prebuild": "rimraf dist",
     "build": "nest build",
+    "coverage": "jest --coverage",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint-staged": "lint-staged",
+    "lint": "npm lint:ts && npm lint:tsc && npm lint:prettier",
+    "lint:ts": "eslint . --ext .js,.ts ",
+    "lint:tsc": "tsc --noEmit --incremental false",
+    "lint:prettier": "prettier . --check",
+    "release": "standard-version",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -21,66 +28,84 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/bull": "^0.1.1",
-    "@nestjs/cli": "^7.2.0",
-    "@nestjs/common": "^7.0.3",
-    "@nestjs/core": "^7.0.3",
-    "@nestjs/platform-express": "^7.0.3",
-    "@nestjs/platform-socket.io": "^7.0.3",
-    "@nestjs/testing": "^7.0.3",
-    "@nestjs/websockets": "^7.0.3",
-    "@types/socket.io-client": "^1.4.33",
-    "@validated-id/vid-did-resolver": "0.0.7",
+    "@nestjs/bull": "^0.3.1",
+    "@nestjs/cli": "^7.5.4",
+    "@nestjs/common": "^7.6.4",
+    "@nestjs/core": "^7.6.4",
+    "@nestjs/platform-express": "^7.6.4",
+    "@nestjs/platform-socket.io": "^7.6.4",
+    "@nestjs/testing": "^7.6.4",
+    "@nestjs/websockets": "^7.6.4",
+    "@validatedid/did-auth": "^2.1.2",
+    "axios": "^0.21.1",
     "base-58": "0.0.1",
+    "base-64": "^1.0.0",
     "base64url": "^3.0.1",
-    "bull": "^3.14.0",
+    "bull": "^3.20.0",
     "cookie-parser": "^1.4.5",
     "csurf": "^1.11.0",
-    "did-jwt": "^4.3.2",
-    "did-resolver": "^1.1.0",
+    "did-jwt": "^4.8.1",
+    "did-resolver": "^2.1.2",
     "dotenv": "^8.2.0",
-    "ethers": "^4.0.47",
+    "ethers": "^5.0.24",
+    "express": "^4.17.1",
     "hbs": "^4.1.1",
-    "jose": "^1.27.0",
+    "ioredis": "^4.19.4",
+    "jose": "^3.5.0",
+    "jwt-decode": "^3.1.2",
     "key-encoder": "^2.0.3",
+    "nest-winston": "^1.4.0",
+    "node-fetch": "^2.6.1",
     "qrcode": "^1.4.4",
+    "querystring": "^0.2.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.5.5",
-    "socket.io-client": "^2.3.0"
+    "rxjs": "^6.6.3",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
+    "winston": "^3.3.3"
   },
   "devDependencies": {
-    "@types/bull": "^3.13.0",
-    "@types/express": "^4.17.3",
-    "@types/jest": "25.1.4",
-    "@types/node": "^13.9.1",
-    "@types/supertest": "^2.0.8",
-    "@typescript-eslint/eslint-plugin": "^2.23.0",
-    "@typescript-eslint/parser": "^2.23.0",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.10.0",
-    "eslint-plugin-import": "^2.20.1",
-    "jest": "^25.1.0",
-    "prettier": "^1.19.1",
-    "supertest": "^4.0.2",
-    "ts-jest": "25.2.1",
-    "ts-loader": "^6.2.1",
-    "ts-node": "^8.6.2",
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
+    "@tsconfig/node14": "^1.0.0",
+    "@types/base-64": "^0.1.3",
+    "@types/bull": "^3.14.4",
+    "@types/cookie-parser": "^1.4.2",
+    "@types/csurf": "^1.11.0",
+    "@types/express": "^4.17.9",
+    "@types/jest": "^26.0.19",
+    "@types/node": "^14.14.14",
+    "@types/node-fetch": "^2.5.7",
+    "@types/qrcode": "^1.3.5",
+    "@types/socket.io": "^2.1.4",
+    "@types/socket.io-client": "^1.4.32",
+    "@types/supertest": "^2.0.10",
+    "@typescript-eslint/eslint-plugin": "^4.11.0",
+    "@typescript-eslint/parser": "^4.11.0",
+    "eslint": "^7.16.0",
+    "eslint-config-airbnb-typescript": "^12.0.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-prettier": "^3.3.0",
+    "husky": "^4.3.6",
+    "jest": "^26.6.3",
+    "jest-junit": "^12.0.0",
+    "lint-staged": "^10.5.3",
+    "prettier": "^2.2.1",
+    "standard-version": "^9.0.0",
+    "supertest": "^6.0.1",
+    "ts-jest": "^26.4.4",
+    "ts-loader": "^8.0.12",
+    "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^3.7.4"
+    "typescript": "^4.1.3"
   },
-  "jest": {
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "ts"
-    ],
-    "rootDir": "src",
-    "testRegex": ".spec.ts$",
-    "transform": {
-      "^.+\\.(t|j)s$": "ts-jest"
-    },
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "pre-commit": "lint-staged"
+    }
   }
 }
