ci: deployment checkout fetchdepth

--- a/azure-pipelines/azure-pipelines-pro.yml
+++ b/azure-pipelines/azure-pipelines-pro.yml
@@ -97,6 +97,7 @@ stages:
         deploy:
           steps:
           - checkout: self
+            fetchDepth: 1
           - task: Kubernetes@1
             displayName: Create/update configmap
             inputs:
