--- a/azure-pipelines/azure-pipelines-dev.yml
+++ b/azure-pipelines/azure-pipelines-dev.yml
@@ -55,6 +55,7 @@ stages:
     displayName: 'Build identity-consent'
     pool:
       vmImage: $(vmImageName)
+    dependsOn: GetPackageVersion
     steps:
     - task: Docker@2
       displayName: Login ACR
