ci: update hydra cm for new ory image version

--- a/packages/hydra/configmap-dev.yml
+++ b/packages/hydra/configmap-dev.yml
@@ -12,4 +12,4 @@ data:
   CORS_ALLOWED_ORIGINS: "*"
   CORS_DEBUG: "true"
   HTTPS_ALLOW_TERMINATION_FROM: "10.0.0.0/8"
-  WEBFINGER_OIDC_DISCOVERY_SUPPORTED_SCOPE: "[\"VerifiableIdCredential\"]"
+  WEBFINGER_OIDC_DISCOVERY_SUPPORTED_SCOPE: '[\"VerifiableIdCredential\"]'
