--- a/packages/hydra/k8s-dev.yml
+++ b/packages/hydra/k8s-dev.yml
@@ -137,6 +137,7 @@ metadata:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/ssl-redirect: "true"
     nginx.ingress.kubernetes.io/ssl-passthrough: "true"
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
     nginx.ingress.kubernetes.io/auth-proxy-set-headers: custom-headers
 spec:
   tls:
