--- a/packages/hydra/configmap-dev.yml
+++ b/packages/hydra/configmap-dev.yml
@@ -8,8 +8,8 @@ data:
   URLS_LOGIN: "https://dev.vidchain.net/login"
   URLS_LOGOUT: "https://dev.vidchain.net/logout"
   SERVE_COOKIES_SAME_SITE_MODE: Strict
-  CORS_ENABLED: "true"
-  CORS_ALLOWED_ORIGINS: "*"
-  CORS_DEBUG: "true"
-  HTTPS_ALLOW_TERMINATION_FROM: "10.0.0.0/8"
+  SERVE_PUBLIC_CORS_ENABLED: "true"
+  SERVE_PUBLIC_CORS_ALLOWED_ORIGINS: "*"
+  SERVE_PUBLIC_CORS_DEBUG: "true"
+  SERVE_TLS_ALLOW_TERMINATION_FROM: "10.0.0.0/8"
   WEBFINGER_OIDC_DISCOVERY_SUPPORTED_SCOPE: '[\"VerifiableIdCredential\"]'
