fix: serve json for ios deep links

--- a/packages/identity-consent/k8s/k8s-dev.yml
+++ b/packages/identity-consent/k8s/k8s-dev.yml
@@ -118,6 +118,10 @@ spec:
         backend:
           serviceName: identity-consent-api-service
           servicePort: 3000
+      - path: /apple-app-site-association
+        backend:
+          serviceName: identity-consent-api-service
+          servicePort: 3000
       - path: /socket
         backend:
           serviceName: identity-consent-api-service
