refactor: add k8s support for apple-site

--- a/packages/identity-consent/k8s/k8s-pro.yml
+++ b/packages/identity-consent/k8s/k8s-pro.yml
@@ -114,6 +114,10 @@ spec:
         backend:
           serviceName: identity-consent-api-service
           servicePort: 3000
+      - path: /apple-app-site-association
+        backend:
+          serviceName: identity-consent-api-service
+          servicePort: 3000
       - path: /siop
         backend:
           serviceName: identity-consent-api-service
