--- a/packages/hydra/k8s-pro.yml
+++ b/packages/hydra/k8s-pro.yml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: hydra
-        image: oryd/hydra:latest
+        image: oryd/hydra:v1.10.1-alpine
         command: ["hydra"]
         args: ["serve", "all"]
         ports:
