--- a/packages/identity-consent/src/templates/apple-app-site-association.json
+++ b/packages/identity-consent/src/templates/apple-app-site-association.json
@@ -4,7 +4,7 @@
     "details": [
       {
         "appID": "T6LZ7FGS8Z.com.vidchain.wallet",
-        "paths": ["*"]
+        "paths": ["/deeplink"]
       }
     ]
   }
