fix: add not redirect paths deeplink url apple-app-site-asociation

--- a/packages/identity-consent/src/templates/apple-app-site-association.json
+++ b/packages/identity-consent/src/templates/apple-app-site-association.json
@@ -4,7 +4,7 @@
     "details": [
       {
         "appID": "T6LZ7FGS8Z.com.vidchain.wallet",
-        "paths": ["/deeplink"]
+        "paths": ["/deep-link/*", "NOT /oauth2/*"]
       }
     ]
   }
